# badgerminton-pipeline

./: .env.example  .gitignore  README.md  calculate.ipynb  clean.ipynb  colocate.ipynb  elo.js  helpers.py  pyproject.toml
