[project]
name = "badgerminton-pipeline"
version = "0.1.0"
description = "Pipeline for badgerminton data cleaning and ELO scores computation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.1.4",
    "jupyterlab>=4.3.0",
    "pandas>=2.2.3",
    "pygithub>=2.4.0",
    "python-dotenv>=1.0.1",
]
